--- a/src/main/webapp/WEB-INF/view/include/menu.jspf
+++ b/src/main/webapp/WEB-INF/view/include/menu.jspf
@@ -1,26 +1,28 @@
-<%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ taglib prefix = "fn" uri = "http://java.sun.com/jsp/jstl/functions" %>
 
 <div id="menu">
     <div class="pure-menu">
-        <a class="pure-menu-heading" href="#">
+<!--        <a class="pure-menu-heading" href="#">
             OOO 您好
-        </a>
+        </a>-->
         <!-- PSI -->
         <ul class="pure-menu-list">
             <li>
-                <a href="${pageContext.request.contextPath}/mvc/psi/product" class="pure-menu-link">商品 Product</a>
+                <a href="${pageContext.request.contextPath}/index.html" class="pure-menu-link">Home</a>
             </li>
             <li>
-                <a href="${pageContext.request.contextPath}/mvc/psi/inventory" class="pure-menu-link">庫存 Inventory</a>
+                <a href="${pageContext.request.contextPath}/mvc/psi/product" class="pure-menu-link">Product</a>
             </li>
             <li>
-                <a href="${pageContext.request.contextPath}/mvc/psi/purchase" class="pure-menu-link">進貨 Purchase</a>
+                <a href="${pageContext.request.contextPath}/mvc/psi/inventory" class="pure-menu-link">Inventory</a>
             </li>
             <li>
-                <a href="${pageContext.request.contextPath}/mvc/psi/sales" class="pure-menu-link">銷貨 Sales</a>
+                <a href="${pageContext.request.contextPath}/mvc/psi/purchase" class="pure-menu-link">Purchase</a>
+            </li>
+            <li>
+                <a href="${pageContext.request.contextPath}/mvc/psi/sales" class="pure-menu-link">Sales</a>
             </li>
         </ul>
     </div>
