--- a/src/main/webapp/css/layouts/side-menu-old-ie.css
+++ b/src/main/webapp/css/layouts/side-menu-old-ie.css
@@ -1,5 +1,7 @@
 body {
-    color: #777;
+    background-image: linear-gradient(-280deg, #a8edea 0%, #fed6e3 100%);
+    background-size:cover; /*讓圖片完全填滿整個容器 */
+    background-repeat: repeat;
 }
 
 .pure-img-responsive {
@@ -94,7 +96,7 @@ appears on the left side of the page.
     bottom: 0;
     z-index: 1000;
     /* so the menu or its navicon stays above all content */
-    background: #191818;
+    background-image: linear-gradient(-280deg, #a8edea 0%, #fed6e3 100%);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
